<resources>
    <string name="app_name">Crypto Wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_buy_sell">Buy | Sell</string>
    <string name="menu_exchange">Exchange</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_settings">Settings</string>
    <string name="wallet_button_content_description">Wallet button</string>
    <string name="exchange_button_content_description">Exchange button</string>
    <string name="wallet">Wallet</string>
    <string name="exchange">Exchange</string>
    <string name="exchange_card_description">You can start using exchange</string>
    <string name="wallet_card_description">You can start using wallets</string>
</resources>
