<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_buy_sell"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_buy_sell" />
        <item
            android:id="@+id/nav_exchange"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_exchange" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
